--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "@prisma/client": "^6.14.0",
+        "@radix-ui/react-slider": "^1.3.6",
         "bcrypt": "^6.0.0",
         "clsx": "^2.1.1",
         "csv-parse": "^6.1.0",
