--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "bcrypt": "^6.0.0",
         "clsx": "^2.1.1",
         "csv-parse": "^6.1.0",
+        "framer-motion": "^12.23.14",
         "jsonwebtoken": "^9.0.2",
         "lucide-react": "^0.542.0",
         "next": "15.5.0",
